# rs-bff

./: Cargo.toml  LICENSE  Makefile  README.md  hello.bf  hello2.bf  rustfmt.toml
.github/workflows/: main.yml
crates/bff/: Cargo.toml
crates/bff-core/: Cargo.toml
crates/bff-core/src/: error.rs  ext.rs  lib.rs
crates/bff-tui/: Cargo.toml
crates/bff-tui/src/: app.rs  error.rs  main.rs  ui.rs  util.rs
crates/bff-tui/src/ui/: editor.rs  footer.rs  middle.rs  mod.rs  title.rs
crates/bff/src/: main.rs  reader.rs
src/: error.rs  lib.rs  main.rs
tests/: empty_loop.bf  hello.bf  hello5.bf
