[package]
name = "rs-bff"
version = "0.1.0"
authors = ["Pedro Rodrigues <csixteen@protonmail.com>"]
edition = "2018"
description = "A simple Brainfuck interpreter."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
termios = "0.3.1"
