[package]
name = "rs-bff"
version = "0.2.0"
authors = ["Pedro Rodrigues <csixteen@protonmail.com>"]
edition = "2024"
description = "A simple Brainfuck interpreter."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
termios = "0.3"
thiserror = "2.0"
