[package]
name = "bff-tui"
version = "0.1.0"
authors = ["Pedro Rodrigues <github.com.urologist223@passmail.net>"]
edition = "2024"
description = "A simple TUI Brainfuck interpreter."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
thiserror.workspace = true
