[package]
name = "bff"
version = "0.2.0"
authors = ["Pedro Rodrigues <github.com.urologist223@passmail.net>"]
edition = "2024"
description = "A simple Brainfuck interpreter."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bff-core.workspace = true
clap = { workspace = true, features = ["derive"] }
termios.workspace = true
